--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rowTextView">
+    android:id="@+id/rowTextView"
+    >
 
     <com.astrogro.astrogro.FontTextView
         android:id="@+id/podName"
