--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <item name="transparent" type="color">#00FFFFFF</item>
     <item name="grey" type="color">#555555</item>
-    <item name="green" type="color">#4499CC00</item>
+    <item name="green" type="color">#FF00FF00</item>
+    <item name="red" type="color">#FFFF0000</item>
     <item name="darkgreen" type="color">#FF669900</item>
     <item name="defaultFontColor" type="color">#FFFAD7</item>
 </resources>
